--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 For the use of the Financial Wisdom Community. 
-Scripts written by author specified on each file, I claim no ownership.
+Scripts written by author specified on each file and governed by license specified in each script.
+
+I claim no ownership and make no warranties on the code, its correctness or suitability for any purpose.
